<?xml version="1.0"?>
<package>
  <name>heimdall_image_handler</name>
  <version>1.0.0</version>
  <description>The heimdall_image_handler package</description>
  <maintainer email="info@enacer.com">enacer</maintainer>
  <author>Christof Oost</author>
  <author>Amir Shantia</author>
  <author>Ron Snijders</author>
  <author>Egbert van der Wal</author>
  <license>AGPL-3.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>heimdall_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>heimdall_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <export>
  </export>
</package>
